# tiny-transformer

./: .gitignore  README.md  playground.ipynb  pyproject.toml
src/: data.py  inference.ipynb  inference_notebook.ipynb  model.py  teaching_demo.ipynb  test_data.py  test_gpu.py  test_transformer.py  train.py  transformer.py  utils.py
