[project]
name = "tiny-transformer"
version = "0.1.0"
description = "A tiny transformer model"
authors = ["Saheb Motiani"]
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "numpy",
    "optax",
    "matplotlib",
    "datasets",
    "transliterate",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
